Add landing html first block

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <main>
       <h1>CatPhotoApp</h1>
+      <a href="figma-landing/landing.html">To figma project</a>
       <section>
         <h2>Cat Photos</h2>
         <p>
