Add second block on figma landing

--- a/figma-landing/landing.html
+++ b/figma-landing/landing.html
@@ -3,7 +3,7 @@
   <head>
     <title>Figma Landing</title>
     <style>
-      #desktop_feature_light {
+      #desktop {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -29,11 +29,23 @@
         width: 200px;
         margin: 0 20px;
       }
+      #desktop_hero_ligth_content {
+        display: flex;
+        justify-content: space-between; /* Adjusts spacing between the two elements */
+        align-items: center; /* Vertically centers the items */
+        gap: 20px;
+      }
+      #desktop_hero_ligth_frame_19 {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+      }
     </style>
   </head>
   <body>
     <main>
-      <div id="desktop_feature_light">
+      <div id="desktop">
         <div id="desktop_feature_light_content">
           <div id="desktop_header_light">
             <div id="desktop_navbar">
@@ -106,6 +118,23 @@
           </div>
           <div id="desktop_feature_light_screen_content">
             <h2>Beautiful screen with play button</h2>
+          </div>
+        </div>
+        <div id="desktop_hero_ligth_content">
+          <div id="desktop_hero_ligth_frame_19">
+            <div id="desktop_hero_ligth_frame_19_text_content">
+              <h2>Fastest way to organize</h2>
+              <h4>
+                Most calendars are designed for teams. Slate is designed for
+                freelancers
+              </h4>
+            </div>
+            <div id="desktop_hero_ligth_frame_19_action_content">
+              <button>Try For Free</button>
+            </div>
+          </div>
+          <div id="desktop_hero_ligth_frame_18">
+            <div><p>Picture of Macbook</p></div>
           </div>
         </div>
       </div>
