--- a/figma-landing/landing.html
+++ b/figma-landing/landing.html
@@ -2,46 +2,7 @@
 <html lang="en">
   <head>
     <title>Figma Landing</title>
-    <style>
-      #desktop {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-      }
-      #desktop_navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-      #desktop_feature_light_items_container {
-        display: flex;
-        justify-content: space-around;
-        align-items: flex-start;
-        padding: 20px;
-      }
-      #desktop_feature_light_item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        width: 200px;
-        margin: 0 20px;
-      }
-      #desktop_hero_ligth_content {
-        display: flex;
-        justify-content: space-between; /* Adjusts spacing between the two elements */
-        align-items: center; /* Vertically centers the items */
-        gap: 20px;
-      }
-      #desktop_hero_ligth_frame_19 {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        text-align: left;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
@@ -135,6 +96,168 @@
           </div>
           <div id="desktop_hero_ligth_frame_18">
             <div><p>Picture of Macbook</p></div>
+          </div>
+        </div>
+        <div id="desktop_ligth_cta_content">
+          <div id="desktop_ligth_cta_left_container">
+            <p>Image of dude with big envelop</p>
+          </div>
+          <div id="desktop_ligth_cta_right_container">
+            <div id="desktop_ligth_cta_padding_top"></div>
+            <div id="desktop_ligth_cta_right_container_text_content">
+              <h3>At your fingertips</h3>
+              <h2>Lightning fast prototyping</h2>
+            </div>
+            <div id="desktop_ligth_cta_right_container_action_content">
+              <h3>Subscribe to our Newsletter</h3>
+              <p>Available exclusivery on Figmaland</p>
+              <input type="text" placeholder="Your Email" />
+              <button>Subscribe</button>
+            </div>
+          </div>
+        </div>
+        <div id="desktop_partner_light_content">
+          <div id="desktop_partner_light_text_content">
+            <h3></h3>
+            <h2>Partners</h2>
+            <h4>
+              Most calendars are designed for teams. Slate is designed for
+              freelancers
+            </h4>
+          </div>
+          <div id="desktop_partner_light_items">
+            <div id="desktop_partner_light_items_row">
+              <div id="desktop_partner_light_item">
+                <p>Google</p>
+              </div>
+              <div id="desktop_partner_light_item"><p>Amazon</p></div>
+              <div id="desktop_partner_light_item"><p>Microsoft</p></div>
+              <div id="desktop_partner_light_item"><p>Uber</p></div>
+            </div>
+            <br />
+            <div id="desktop_partner_light_items_row">
+              <div id="desktop_partner_light_item"><p>Dropbox</p></div>
+              <div id="desktop_partner_light_item"><p>Google</p></div>
+              <div id="desktop_partner_light_item"><p>Uber</p></div>
+              <div id="desktop_partner_light_item"><p>Amazon</p></div>
+            </div>
+          </div>
+          <div id="desktop_hero_light_action_content">
+            <button>Try For Free</button>
+          </div>
+        </div>
+        <div id="desktop_testimonials_light_content">
+          <div id="desktop_testimonials_light_text_content">
+            <h2>Testimonials</h2>
+          </div>
+          <div id="desktop_testimonials_light_items">
+            <p>Brand logo</p>
+            <h4>
+              Most calendars are designed for teams. Slate is designed for
+              freelancers who want a simple way to plan their schedule.
+            </h4>
+            <div id="desktop_testimonials_light_client">
+              <p>Client avatar</p>
+              <h6>Organize across Ui designer</h6>
+              <h6><a href="#">Ui designer</a></h6>
+            </div>
+          </div>
+          <div id="desktop_testimonials_light_action">
+            <button>More Testimonials</button>
+          </div>
+        </div>
+        <div id="desktop_pricing_light_content">
+          <div id="desktop_pricing_light_text_content">
+            <h2>Pricing</h2>
+            <h4>
+              Most calendars are designed for teams. Slate is designed for
+              freelancers
+            </h4>
+          </div>
+          <div id="desktop_pricing_light_items">
+            <div id="desktop_pricing_light_items_row">
+              <div id="desktop_pricing_light_style">
+                <div id="desktop_pricing_light_style_heading">
+                  <h3>FREE</h3>
+                  <h6>Organize across all apps by hand</h6>
+                </div>
+                <div id="desktop_pricing_light_style_row">
+                  <div id="desktop_pricing_light_style_row_headline">
+                    <h1>0</h1>
+                  </div>
+                  <div id="desktop_pricing_light_style_row_block">
+                    <h3>$</h3>
+                    <h6>Per Month</h6>
+                  </div>
+                </div>
+                <div id="desktop_pricing_light_style_list">
+                  <ul>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                  </ul>
+                </div>
+                <div id="desktop_pricing_light_style_button">
+                  <button>Order Now</button>
+                </div>
+              </div>
+              <div id="desktop_pricing_light_style_contrast">
+                <div id="desktop_pricing_light_style_heading">
+                  <h3>FREE</h3>
+                  <h6>Organize across all apps by hand</h6>
+                </div>
+                <div id="desktop_pricing_light_style_row">
+                  <div id="desktop_pricing_light_style_row_headline">
+                    <h1>10</h1>
+                  </div>
+                  <div id="desktop_pricing_light_style_row_block">
+                    <h3>$</h3>
+                    <h6>Per Month</h6>
+                  </div>
+                </div>
+                <div id="desktop_pricing_light_style_list">
+                  <ul>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                  </ul>
+                </div>
+                <div id="desktop_pricing_light_style_button">
+                  <button>Order Now</button>
+                </div>
+              </div>
+              <div id="desktop_pricing_light_style">
+                <div id="desktop_pricing_light_style_heading">
+                  <h3>FREE</h3>
+                  <h6>Organize across all apps by hand</h6>
+                </div>
+                <div id="desktop_pricing_light_style_row">
+                  <div id="desktop_pricing_light_style_row_headline">
+                    <h1>99</h1>
+                  </div>
+                  <div id="desktop_pricing_light_style_row_block">
+                    <h3>$</h3>
+                    <h6>Per Month</h6>
+                  </div>
+                </div>
+                <div id="desktop_pricing_light_style_list">
+                  <ul>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                  </ul>
+                </div>
+                <div id="desktop_pricing_light_style_button">
+                  <button>Order Now</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
