Add block to figma project

--- a/figma-landing/landing.html
+++ b/figma-landing/landing.html
@@ -7,24 +7,24 @@
   <body>
     <main>
       <div id="desktop">
-        <div id="desktop_feature_light_content">
-          <div id="desktop_header_light">
-            <div id="desktop_navbar">
-              <div id="desktop_menu">
+        <div id="desktop-feature-light-content">
+          <div id="desktop-header-light">
+            <div id="desktop-navbar">
+              <div id="desktop-menu">
                 <nav>
-                  <a href="#">Home</a>
+                  <a href="/">Home</a>
                   <a href="#">Product</a>
                   <a href="#">Pricing</a>
                   <a href="#">About</a>
                   <a href="#">Contact</a>
                 </nav>
               </div>
-              <div id="desktop_center">
+              <div id="desktop-center">
                 <p>Figma land logo</p>
               </div>
-              <div id="desktop_rigth">
-                <div id="desktop_actions">
-                  <div id="social_media">
+              <div id="desktop-rigth">
+                <div id="desktop-actions">
+                  <div id="social-media">
                     <nav>
                       <a href="#">Twitter</a>
                       <a href="#">Facebook</a>
@@ -34,42 +34,42 @@
                 </div>
               </div>
             </div>
-            <div id="desktop_hero_light">
-              <div id="desktop_hero_light_text_container">
+            <div id="desktop-hero-light">
+              <div id="desktop-hero-light-text-container">
                 <h1>The best products start with Figma</h1>
                 <h4>
                   Most calendars are designed for teams. Slate is designed for
                   freelancers
                 </h4>
               </div>
-              <div id="desktop_hero_light_action_content">
+              <div id="desktop-hero-light-action-content">
                 <button>Try For Free</button>
               </div>
             </div>
           </div>
-          <div id="desktop_feature_light_text_content">
+          <div id="desktop-feature-light-text-content">
             <h2>Features</h2>
             <h4>
               Most calendars are designed for teams. Slate is designed for
               freelancers
             </h4>
           </div>
-          <div id="desktop_feature_light_items_container">
-            <div id="desktop_feature_light_item">
+          <div id="desktop-feature-light-items-container">
+            <div id="desktop-feature-light-item">
               <h3>OpenType features Variable fonts</h3>
               <p>
                 Slate helps you see how many more days you need to work to reach
                 your financial goal.
               </p>
             </div>
-            <div id="desktop_feature_light_item">
+            <div id="desktop-feature-light-item">
               <h3>Design with real data</h3>
               <p>
                 Slate helps you see how many more days you need to work to reach
                 your financial goal.
               </p>
             </div>
-            <div id="desktop_feature_light_item">
+            <div id="desktop-feature-light-item">
               <h3>Fastest way to take action</h3>
               <p>
                 Slate helps you see how many more days you need to work to reach
@@ -77,38 +77,38 @@
               </p>
             </div>
           </div>
-          <div id="desktop_feature_light_screen_content">
+          <div id="desktop-feature-light-screen-content">
             <h2>Beautiful screen with play button</h2>
           </div>
         </div>
-        <div id="desktop_hero_ligth_content">
-          <div id="desktop_hero_ligth_frame_19">
-            <div id="desktop_hero_ligth_frame_19_text_content">
+        <div id="desktop-hero-ligth-content">
+          <div id="desktop-hero-ligth-frame-19">
+            <div id="desktop-hero-ligth-frame-19-text-content">
               <h2>Fastest way to organize</h2>
               <h4>
                 Most calendars are designed for teams. Slate is designed for
                 freelancers
               </h4>
             </div>
-            <div id="desktop_hero_ligth_frame_19_action_content">
+            <div id="desktop-hero-ligth-frame-19-action-content">
               <button>Try For Free</button>
             </div>
           </div>
-          <div id="desktop_hero_ligth_frame_18">
+          <div id="desktop-hero-ligth-frame-18">
             <div><p>Picture of Macbook</p></div>
           </div>
         </div>
-        <div id="desktop_ligth_cta_content">
-          <div id="desktop_ligth_cta_left_container">
+        <div id="desktop-ligth-cta-content">
+          <div id="desktop-ligth-cta-left-container">
             <p>Image of dude with big envelop</p>
           </div>
-          <div id="desktop_ligth_cta_right_container">
-            <div id="desktop_ligth_cta_padding_top"></div>
-            <div id="desktop_ligth_cta_right_container_text_content">
+          <div id="desktop-ligth-cta-right-container">
+            <div id="desktop-ligth-cta-padding-top"></div>
+            <div id="desktop-ligth-cta-right-container-text-content">
               <h3>At your fingertips</h3>
               <h2>Lightning fast prototyping</h2>
             </div>
-            <div id="desktop_ligth_cta_right_container_action_content">
+            <div id="desktop-ligth-cta-right-container-action-content">
               <h3>Subscribe to our Newsletter</h3>
               <p>Available exclusivery on Figmaland</p>
               <input type="text" placeholder="Your Email" />
@@ -116,8 +116,8 @@
             </div>
           </div>
         </div>
-        <div id="desktop_partner_light_content">
-          <div id="desktop_partner_light_text_content">
+        <div id="desktop-partner-light-content">
+          <div id="desktop-partner-light-text-content">
             <h3></h3>
             <h2>Partners</h2>
             <h4>
@@ -125,72 +125,72 @@
               freelancers
             </h4>
           </div>
-          <div id="desktop_partner_light_items">
-            <div id="desktop_partner_light_items_row">
-              <div id="desktop_partner_light_item">
+          <div id="desktop-partner-light-items">
+            <div id="desktop-partner-light-items-row">
+              <div id="desktop-partner-light-item">
                 <p>Google</p>
               </div>
-              <div id="desktop_partner_light_item"><p>Amazon</p></div>
-              <div id="desktop_partner_light_item"><p>Microsoft</p></div>
-              <div id="desktop_partner_light_item"><p>Uber</p></div>
+              <div id="desktop-partner-light-item"><p>Amazon</p></div>
+              <div id="desktop-partner-light-item"><p>Microsoft</p></div>
+              <div id="desktop-partner-light-item"><p>Uber</p></div>
             </div>
             <br />
-            <div id="desktop_partner_light_items_row">
-              <div id="desktop_partner_light_item"><p>Dropbox</p></div>
-              <div id="desktop_partner_light_item"><p>Google</p></div>
-              <div id="desktop_partner_light_item"><p>Uber</p></div>
-              <div id="desktop_partner_light_item"><p>Amazon</p></div>
+            <div id="desktop-partner-light-items-row">
+              <div id="desktop-partner-light-item"><p>Dropbox</p></div>
+              <div id="desktop-partner-light-item"><p>Google</p></div>
+              <div id="desktop-partner-light-item"><p>Uber</p></div>
+              <div id="desktop-partner-light-item"><p>Amazon</p></div>
             </div>
           </div>
-          <div id="desktop_hero_light_action_content">
+          <div id="desktop-hero-light-action-content">
             <button>Try For Free</button>
           </div>
         </div>
-        <div id="desktop_testimonials_light_content">
-          <div id="desktop_testimonials_light_text_content">
+        <div id="desktop-testimonials-light-content">
+          <div id="desktop-testimonials-light-text-content">
             <h2>Testimonials</h2>
           </div>
-          <div id="desktop_testimonials_light_items">
+          <div id="desktop-testimonials-light-items">
             <p>Brand logo</p>
             <h4>
               Most calendars are designed for teams. Slate is designed for
               freelancers who want a simple way to plan their schedule.
             </h4>
-            <div id="desktop_testimonials_light_client">
+            <div id="desktop-testimonials-light-client">
               <p>Client avatar</p>
               <h6>Organize across Ui designer</h6>
               <h6><a href="#">Ui designer</a></h6>
             </div>
           </div>
-          <div id="desktop_testimonials_light_action">
+          <div id="desktop-testimonials-light-action">
             <button>More Testimonials</button>
           </div>
         </div>
-        <div id="desktop_pricing_light_content">
-          <div id="desktop_pricing_light_text_content">
+        <div id="desktop-pricing-light-content">
+          <div id="desktop-pricing-light-text-content">
             <h2>Pricing</h2>
             <h4>
               Most calendars are designed for teams. Slate is designed for
               freelancers
             </h4>
           </div>
-          <div id="desktop_pricing_light_items">
-            <div id="desktop_pricing_light_items_row">
-              <div id="desktop_pricing_light_style">
-                <div id="desktop_pricing_light_style_heading">
+          <div id="desktop-pricing-light-items">
+            <div id="desktop-pricing-light-items-row">
+              <div id="desktop-pricing-light-style">
+                <div id="desktop-pricing-light-style-heading">
                   <h3>FREE</h3>
                   <h6>Organize across all apps by hand</h6>
                 </div>
-                <div id="desktop_pricing_light_style_row">
-                  <div id="desktop_pricing_light_style_row_headline">
+                <div id="desktop-pricing-light-style-row">
+                  <div id="desktop-pricing-light-style-row-headline">
                     <h1>0</h1>
                   </div>
-                  <div id="desktop_pricing_light_style_row_block">
+                  <div id="desktop-pricing-light-style-row-block">
                     <h3>$</h3>
                     <h6>Per Month</h6>
                   </div>
                 </div>
-                <div id="desktop_pricing_light_style_list">
+                <div id="desktop-pricing-light-style-list">
                   <ul>
                     <li>Pricing Feature</li>
                     <li>Pricing Feature</li>
@@ -199,25 +199,25 @@
                     <li>Pricing Feature</li>
                   </ul>
                 </div>
-                <div id="desktop_pricing_light_style_button">
+                <div id="desktop-pricing-light-style-button">
                   <button>Order Now</button>
                 </div>
               </div>
-              <div id="desktop_pricing_light_style_contrast">
-                <div id="desktop_pricing_light_style_heading">
+              <div id="desktop-pricing-light-style-contrast">
+                <div id="desktop-pricing-light-style-heading">
                   <h3>FREE</h3>
                   <h6>Organize across all apps by hand</h6>
                 </div>
-                <div id="desktop_pricing_light_style_row">
-                  <div id="desktop_pricing_light_style_row_headline">
+                <div id="desktop-pricing-light-style-row">
+                  <div id="desktop-pricing-light-style-row-headline">
                     <h1>10</h1>
                   </div>
-                  <div id="desktop_pricing_light_style_row_block">
+                  <div id="desktop-pricing-light-style-row-block">
                     <h3>$</h3>
                     <h6>Per Month</h6>
                   </div>
                 </div>
-                <div id="desktop_pricing_light_style_list">
+                <div id="desktop-pricing-light-style-list">
                   <ul>
                     <li>Pricing Feature</li>
                     <li>Pricing Feature</li>
@@ -226,25 +226,25 @@
                     <li>Pricing Feature</li>
                   </ul>
                 </div>
-                <div id="desktop_pricing_light_style_button">
+                <div id="desktop-pricing-light-style-button">
                   <button>Order Now</button>
                 </div>
               </div>
-              <div id="desktop_pricing_light_style">
-                <div id="desktop_pricing_light_style_heading">
+              <div id="desktop-pricing-light-style">
+                <div id="desktop-pricing-light-style-heading">
                   <h3>FREE</h3>
                   <h6>Organize across all apps by hand</h6>
                 </div>
-                <div id="desktop_pricing_light_style_row">
-                  <div id="desktop_pricing_light_style_row_headline">
+                <div id="desktop-pricing-light-style-row">
+                  <div id="desktop-pricing-light-style-row-headline">
                     <h1>99</h1>
                   </div>
-                  <div id="desktop_pricing_light_style_row_block">
+                  <div id="desktop-pricing-light-style-row-block">
                     <h3>$</h3>
                     <h6>Per Month</h6>
                   </div>
                 </div>
-                <div id="desktop_pricing_light_style_list">
+                <div id="desktop-pricing-light-style-list">
                   <ul>
                     <li>Pricing Feature</li>
                     <li>Pricing Feature</li>
@@ -253,9 +253,59 @@
                     <li>Pricing Feature</li>
                   </ul>
                 </div>
-                <div id="desktop_pricing_light_style_button">
+                <div id="desktop-pricing-light-style-button">
                   <button>Order Now</button>
                 </div>
+              </div>
+            </div>
+          </div>
+          <div id="desktop-contact-light-content">
+            <div id="desktop-contact-light-text-content">
+              <h2>Contact Us</h2>
+              <h4>
+                Most calendars are designed for teams. Slate is designed for
+                freelancers
+              </h4>
+            </div>
+            <div id="desktop-contact-light-row">
+              <div id="desktop-contact-light-row-left">
+                <div id="desktop-contact-light-action-container">
+                  <div id="desktop-contact-light-sign-form">
+                    <form action="#">
+                      <h3>Contact Us</h3>
+                      <input type="text" placeholder="Your Name" required />
+                      <input type="email" placeholder="Your Email" required />
+                      <div id="desktop-contact-light-sign-form-input-frame">
+                        <input
+                          type="text"
+                          placeholder="Your Message"
+                          required
+                        />
+                      </div>
+                      <button type="submit">Send</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div id="desktop-contact-light-row-right">
+                <div id="desktop-contact-light-row-right-items">
+                  <div id="desktop-contact-light-row-right-block">
+                    <p>Logo</p>
+                    <h6>
+                      6386 Spring St undefined Anchorage, Georgia 12473 United
+                      States
+                    </h6>
+                  </div>
+                  <div id="desktop-contact-light-row-right-block">
+                    <p>Logo</p>
+                    <h6>(843) 555-0130</h6>
+                  </div>
+                  <div id="desktop-contact-light-row-right-block">
+                    <p>Logo</p>
+                    <h6>willie.jennings@example.com</h6>
+                  </div>
+                </div>
+                <div id="desktop-contact-light-row-right-screen content"></div>
               </div>
             </div>
           </div>
