--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
-    <header class="container">
+  <body class="container">
+    <header>
       <section
         data-hx-trigger="load"
         data-hx-swap="outerHTML"
         data-hx-get="./partials/index.hero-header.partial.html"
       ></section>
     </header>
+    <section
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="./partials/index.features.partial.html"
+    ></section>
   </body>
 </html>
