add organize section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
       data-hx-swap="outerHTML"
       data-hx-get="./partials/index.features.partial.html"
     ></section>
+    <section
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="./partials/index.organize.partial.html"
+    ></section>
   </body>
 </html>
