--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
       <section
         data-hx-trigger="load"
         data-hx-swap="outerHTML"
-        data-hx-get="./partials/index.hero-header.partial.html"
+        data-hx-get="index.hero-header.partial.html"
       ></section>
     </header>
     <section
       data-hx-trigger="load"
       data-hx-swap="outerHTML"
-      data-hx-get="./partials/index.features.partial.html"
+      data-hx-get="index.features.partial.html"
     ></section>
     <section
       data-hx-trigger="load"
       data-hx-swap="outerHTML"
-      data-hx-get="./partials/index.organize.partial.html"
+      data-hx-get="index.organize.partial.html"
     ></section>
   </body>
 </html>
