--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
       data-hx-swap="outerHTML"
       data-hx-get="index.organize.partial.html"
     ></section>
+    <section
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="index.newsletter.partial.html"
+    ></section>
   </body>
 </html>
