add partners section

--- a/index.html
+++ b/index.html
@@ -36,5 +36,10 @@
       data-hx-swap="outerHTML"
       data-hx-get="index.newsletter.partial.html"
     ></section>
+    <section
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="index.newsletter.partners.html"
+    ></section>
   </body>
 </html>
