add partners section and refactor file names

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
     <section
       data-hx-trigger="load"
       data-hx-swap="outerHTML"
-      data-hx-get="index.newsletter.partners.html"
+      data-hx-get="index.partners.partial.html"
+    ></section>
+    <section
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="index.testimonials.partials.html"
     ></section>
   </body>
 </html>
