--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
     <section
       data-hx-trigger="load"
       data-hx-swap="outerHTML"
-      data-hx-get="index.testimonials.partials.html"
+      data-hx-get="index.testimonials.partial.html"
+    ></section>
+    <section
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="index.pricing.partial.html"
     ></section>
   </body>
 </html>
