--- a/index.html
+++ b/index.html
@@ -51,5 +51,10 @@
       data-hx-swap="outerHTML"
       data-hx-get="index.pricing.partial.html"
     ></section>
+    <section
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="index.contact-us.partial.html"
+    ></section>
   </body>
 </html>
