--- a/index.html
+++ b/index.html
@@ -56,5 +56,10 @@
       data-hx-swap="outerHTML"
       data-hx-get="index.contact-us.partial.html"
     ></section>
+    <footer
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="index.footer.partial.html"
+    ></footer>
   </body>
 </html>
