add features desktop view

--- a/index.features.partial.html
+++ b/index.features.partial.html
@@ -1,7 +1,12 @@
 <section class="features">
   <article class="features__text-content">
     <h2 class="features__header">Features</h2>
-    <p class="features__subheader">Most calendars are designed for teams.</p>
+    <p class="features__subheader-mobile">
+      Most calendars are designed for teams.
+    </p>
+    <p class="features__subheader-desktop">
+      Most calendars are designed for teams. Slate is designed for freelancers
+    </p>
   </article>
   <div class="features__video">
     <iframe
