add desktop view of organize

--- a/index.organize.partial.html
+++ b/index.organize.partial.html
@@ -1,10 +1,17 @@
 <section class="organize">
   <article class="organize__text">
-    <h3 class="organize__header">Fastest way to organize</h3>
-    <p class="organize__paragraph">Most calendars are designed for teams.</p>
+    <div class="organize__text-title">
+      <h3 class="organize__header">Fastest way to organize</h3>
+      <p class="organize__paragraph-mobile">
+        Most calendars are designed for teams.
+      </p>
+      <p class="organize__paragraph-desktop">
+        Most calendars are designed for teams. Slate is designed for freelancers
+      </p>
+    </div>
+    <a class="organize__button" href="#">Try For Free</a>
   </article>
-  <a class="organize__button" href="#">Try For Free</a>
   <div class="organize__image-wrapper">
-    <img src="./img/organize-macbook-pro.jpg" alt="Macbook pro image">
+    <img src="./img/organize-macbook-pro.jpg" alt="Macbook pro image" />
   </div>
 </section>
