add desktop view of newsletter

--- a/index.newsletter.partial.html
+++ b/index.newsletter.partial.html
@@ -1,13 +1,18 @@
 <section class="newsletter">
   <article class="newsletter__title">
     <h3 class="newsletter__title-subheader">At your fingertips</h3>
-    <h2 class="newsletter__title-header">Newsletter</h2>
+    <h2 class="newsletter__title-header-mobile">Newsletter</h2>
+    <h2 class="newsletter__title-header-desktop">Lightning fast prototyping</h2>
     <p class="newsletter__title-paragraph">
       Most calendars are designed for teams. Slate is designed for freelancers
     </p>
   </article>
   <div class="newsletter__image-wrapper">
-    <img src="./img/newsletter-envelop.png" alt="Image of man with envelop" />
+    <img
+      class="desktop"
+      src="./img/newsletter-envelop-desktop.png"
+      alt="Image of man with envelop"
+    />
   </div>
   <div class="newsletter__form">
     <h3 class="newsletter__form-header-title">Subscribe to our Newsletter</h3>
