add partners desktop view

--- a/index.partners.partial.html
+++ b/index.partners.partial.html
@@ -18,6 +18,26 @@
       <h3 class="partners__cards-header">Client name</h3>
       <img src="./img/logo-microsoft.jpg" alt="Microsoft logo">
     </article>
+    <article class="partners__cards-client">
+      <h3 class="partners__cards-header">Client name</h3>
+      <img src="./img/logo-uber.png" alt="Uber logo">
+    </article>
+    <article class="mobile partners__cards-client">
+      <h3 class="partners__cards-header">Client name</h3>
+      <img src="./img/logo-dropbox.png" alt="Dropbox logo">
+    </article>
+    <article class="mobile partners__cards-client">
+      <h3 class="partners__cards-header">Client name</h3>
+      <img src="./img/logo-google.jpg" alt="Google logo">
+    </article>
+    <article class="mobile partners__cards-client">
+      <h3 class="partners__cards-header">Client name</h3>
+      <img src="./img/logo-uber.png" alt="Uber logo">
+    </article>
+    <article class="mobile partners__cards-client">
+      <h3 class="partners__cards-header">Client name</h3>
+      <img src="./img/logo-amazon.jpg" alt="Amazon logo">
+    </article>
   </div>
   <a class="partners__button" href="#">Try For Free</a>
 </section>
