add desktop testimonals look

--- a/index.testimonials.partial.html
+++ b/index.testimonials.partial.html
@@ -11,7 +11,7 @@
       who want a simple way to plan their schedule.
     </p>
     <div class="testimonials__card-review">
-      <img src="./img/testimonials-avatar.jpg" alt="" />
+      <img src="./img/testimonials-avatar.jpg" alt="Testimonals avatar" />
       <div>
         <h3 class="testimonials__card-review-name">Organize across</h3>
         <p class="testimonials__card-review-title">Ui designer</p>
