--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -1,7 +1,7 @@
 <section class="pricing">
   <header class="pricing__header">
     <h2 class="pricing__header-title">Pricing</h2>
-    <p class="pricing__header-description">
+    <p class="pricing__header-description mobile">
       Most calendars are designed for teams.
     </p>
   </header>
