--- a/index.contact-us.partial.html
+++ b/index.contact-us.partial.html
@@ -5,54 +5,69 @@
       Most calendars are designed for teams.
     </p>
   </div>
-  <div class="contact-us__socials">
-    <a href="https://x.com/" target="_blank">
-      <img src="./img/logo-twitter.jpg" alt="Twitter logo"
-    /></a>
-    <a href="https://www.facebook.com/" target="_blank"
-      ><img src="./img/logo-facebook.jpg" alt="Facebook logo"
-    /></a>
-    <a href="https://ua.linkedin.com/" target="_blank"
-      ><img src="./img/logo-linkedin.jpg" alt="LinkedIn logo"
-    /></a>
-  </div>
-  <div class="contact-us__contacts">
-    <article class="contact-us__contacts-item">
-      <img src="./img/map-tag.png" alt="Map tag" />
-      <p class="contact-us__contacts-text">
-        6386 Spring St undefined Anchorage, Georgia 12473 United States
-      </p>
-    </article>
-    <article class="contact-us__contacts-item">
-      <img src="./img/mobile-phone.png" alt="Mobile phone" />
-      <p class="contact-us__contacts-text">(843) 555-0130</p>
-    </article>
-    <article class="contact-us__contacts-item">
-      <img src="./img/envelop.png" alt="Envelop" />
-      <p class="contact-us__contacts-text">willie.jennings@example.com</p>
-    </article>
-  </div>
-  <div class="contact-us__form">
-    <label class="contact-us__form-label" for="contact-us__form-wraper">
-      Contact Us</label
-    >
-    <form id="contact-us__form-wraper" class="contact-us__form-wraper" action="#" method="post">
-      <input
-        class="contact-us__form-input"
-        type="text"
-        placeholder="Your Name"
-      />
-      <input
-        class="contact-us__form-input"
-        type="email"
-        placeholder="Your Email"
-      />
-      <textarea
-        class="contact-us__form-textarea"
-        placeholder="Your Message"
-        rows="10"
-      ></textarea>
-      <button class="contact-us__form-button" type="submit">Send</button>
-    </form>
+  <div class="contact-us__content">
+    <div class="contact-us__socials">
+      <a href="https://x.com/" target="_blank">
+        <img src="./img/logo-twitter.jpg" alt="Twitter logo"
+      /></a>
+      <a href="https://www.facebook.com/" target="_blank"
+        ><img src="./img/logo-facebook.jpg" alt="Facebook logo"
+      /></a>
+      <a href="https://ua.linkedin.com/" target="_blank"
+        ><img src="./img/logo-linkedin.jpg" alt="LinkedIn logo"
+      /></a>
+    </div>
+    <div class="contact-us__contacts">
+      <article class="contact-us__contacts-item">
+        <img src="./img/map-tag.png" alt="Map tag" />
+        <p class="contact-us__contacts-text">
+          6386 Spring St undefined Anchorage, Georgia 12473 United States
+        </p>
+      </article>
+      <article class="contact-us__contacts-item">
+        <img src="./img/mobile-phone.png" alt="Mobile phone" />
+        <p class="contact-us__contacts-text">(843) 555-0130</p>
+      </article>
+      <article class="contact-us__contacts-item">
+        <img src="./img/envelop.png" alt="Envelop" />
+        <p class="contact-us__contacts-text">willie.jennings@example.com</p>
+      </article>
+    </div>
+    <div class="contact-us__map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d35755.815510263565!2d30.438314492824087!3d50.340290881284076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c8757838fbd1%3A0x2a281b79b17053c3!2z0J_QsNGA0Log0KTQtdC-0YTQsNC90LjRjw!5e1!3m2!1sru!2sua!4v1743836577820!5m2!1sru!2sua"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+    <div class="contact-us__form">
+      <label class="contact-us__form-label" for="contact-us__form-wraper">
+        Contact Us</label
+      >
+      <form
+        id="contact-us__form-wraper"
+        class="contact-us__form-wraper"
+        action="#"
+        method="post"
+      >
+        <input
+          class="contact-us__form-input"
+          type="text"
+          placeholder="Your Name"
+        />
+        <input
+          class="contact-us__form-input"
+          type="email"
+          placeholder="Your Email"
+        />
+        <textarea
+          class="contact-us__form-textarea"
+          placeholder="Your Message"
+          rows="10"
+        ></textarea>
+        <button class="contact-us__form-button" type="submit">Send</button>
+      </form>
+    </div>
   </div>
 </section>
