add footer desktop view

--- a/index.features.partial.html
+++ b/index.features.partial.html
@@ -1,4 +1,4 @@
-<section class="features">
+<section class="features" id="product">
   <article class="features__text-content">
     <h2 class="features__header">Features</h2>
     <p class="features__subheader-mobile">
