--- a/index.footer.partial.html
+++ b/index.footer.partial.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="footer__authors">
+  <div class="footer__authors-mobile">
     <article class="footer__author">
       <h3 class="footer__author-name">Annette Steward</h3>
       <ul class="footer__author-list">
@@ -28,6 +28,38 @@
         <li class="footer__author-list-item">Johnny Murphy</li>
         <li class="footer__author-list-item">Gregory Mccoy</li>
         <li class="footer__author-list-item">Marvin Mckinney</li>
+      </ul>
+    </article>
+  </div>
+  <div class="footer__authors-desktop">
+    <article class="footer__author">
+      <h3 class="footer__author-name">Pages</h3>
+      <ul class="footer__author-list">
+        <li class="footer__author-list-item"><a href="#home">Home</a></li>
+        <li class="footer__author-list-item"><a href="#product">Product</a></li>
+        <li class="footer__author-list-item"><a href="#pricing">Pricing</a></li>
+        <li class="footer__author-list-item"><a href="#about">About</a></li>
+        <li class="footer__author-list-item"><a href="#contacts">Contact</a></li>
+      </ul>
+    </article>
+    <article class="footer__author">
+      <h3 class="footer__author-name">Tomothy</h3>
+      <ul class="footer__author-list">
+        <li class="footer__author-list-item">Eleanor Edwards</li>
+        <li class="footer__author-list-item">Ted Robertson</li>
+        <li class="footer__author-list-item">Annette Russell</li>
+        <li class="footer__author-list-item">Jennie Mckinney</li>
+        <li class="footer__author-list-item">Gloria Richards</li>
+      </ul>
+    </article>
+    <article class="footer__author">
+      <h3 class="footer__author-name">Jane Black</h3>
+      <ul class="footer__author-list">
+        <li class="footer__author-list-item">Philip Jones</li>
+        <li class="footer__author-list-item">Product</li>
+        <li class="footer__author-list-item">Collen Russell</li>
+        <li class="footer__author-list-item">Marvin Hawkins</li>
+        <li class="footer__author-list-item">Bruce Simmons</li>
       </ul>
     </article>
   </div>
