--- a/index.hero-header.partial.html
+++ b/index.hero-header.partial.html
@@ -1,11 +1,11 @@
-<section class="hero">
+<section class="hero" id="home">
   <nav class="hero__navbar">
     <ul class="hero__navbar-list">
-      <a href="#" class="hero__navbar-link"><li class="hero__navbar-item">Home</li></a>
-      <a href="#" class="hero__navbar-link"><li class="hero__navbar-item">Product</li></a>
-      <a href="#" class="hero__navbar-link"><li class="hero__navbar-item">Pricing</li></a>
-      <a href="#" class="hero__navbar-link"><li class="hero__navbar-item">About</li></a>
-      <a href="#contact-us" class="hero__navbar-link"><li class="hero__navbar-item">Contact</li></a>
+      <a href="#home" class="hero__navbar-link"><li class="hero__navbar-item">Home</li></a>
+      <a href="#product" class="hero__navbar-link"><li class="hero__navbar-item">Product</li></a>
+      <a href="#pricing" class="hero__navbar-link"><li class="hero__navbar-item">Pricing</li></a>
+      <a href="#about" class="hero__navbar-link"><li class="hero__navbar-item">About</li></a>
+      <a href="#contacts" class="hero__navbar-link"><li class="hero__navbar-item">Contact</li></a>
     </ul>
     <div class="hero__logo">
       <img src="./img/header-logo.png" alt="Figma land logo" />
