--- a/index.contact-us.partial.html
+++ b/index.contact-us.partial.html
@@ -1,4 +1,4 @@
-<section class="contact-us" id="contact-us">
+<section class="contact-us" id="contacts">
   <div class="contact-us__header">
     <h2 class="contact-us__header-title">Contact Us</h2>
     <p class="contact-us__header-paragraph">
