--- a/index.partners.partial.html
+++ b/index.partners.partial.html
@@ -1,4 +1,4 @@
-<section class="partners">
+<section class="partners" id="about">
   <header class="partners__text">
     <h2 class="partners__text-header">Partners</h2>
     <p class="partners__text-paragraph">
