--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -1,4 +1,4 @@
-<section class="pricing">
+<section class="pricing" id="pricing">
   <header class="pricing__header">
     <h2 class="pricing__header-title">Pricing</h2>
     <p class="pricing__header-description mobile">
